--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.1.0",
+    "@sanity/asset-utils": "^2.2.1",
     "@sanity/client": "^6.19.1",
     "@sanity/image-url": "^1.0.2",
     "blobs": "^2.3.0-beta.2",
+    "framer-motion": "^12.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^6.1.11",
-    "wouter": "^3.2.0"
+    "wouter": "^3.2.0",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
